--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                     <a href="#services" class="nav-link" data-link>Services</a>
                     <a href="#about" class="nav-link" data-link>About</a>
                     <a href="#contact" class="nav-link" data-link>Contact</a>
-                    <a href="#booking" class="nav-link btn-primary" data-link>Book Now</a>
                 </div>
                 <div class="nav-toggle" id="nav-toggle">
                     <span class="bar"></span>
@@ -57,28 +56,26 @@
                         <h3>Serenity Spa & Massage</h3>
                         <p>Your sanctuary for relaxation and wellness.</p>
                         <div class="social-links">
-                            <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/laxmi.bhandari.507/#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                             <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                             <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         </div>
                     </div>
                     
-                    <div class="footer-section">
+                    <div class="footer-section" >
                         <h4>Quick Links</h4>
                         <ul>
                             <li><a href="#services" data-link>Services</a></li>
                             <li><a href="#about" data-link>About Us</a></li>
                             <li><a href="#contact" data-link>Contact</a></li>
-                            <li><a href="#booking" data-link>Book Appointment</a></li>
-                        </ul>
                     </div>
                     
                     <div class="footer-section">
                         <h4>Contact Info</h4>
                         <div class="contact-info">
-                            <p style="color: black;"><i class="fas fa-phone"></i> (555) 123-4567</p>
-                            <p style="color: black;"><i class="fas fa-envelope"></i> info@serenityspa.com</p>
-                            <p style="color: black;"><i class="fas fa-map-marker-alt"></i> 123 Wellness Ave, City, State 12345</p>
+                            <p style="color: black;"><i class="fas fa-phone"></i><a href="tel:"> (555) 123-4567</a></p>
+                            <p style="color: black;"><i class="fas fa-envelope"></i><a href="mailto:" target="_blank">info@serenityspa.com</a> </p>
+                            <p style="color: black;"><i class="fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps/place/88+Eureka+Dr,+Pacifica,+CA+94044,+USA/@37.6338402,-122.4913194,17z/data=!4m15!1m8!3m7!1s0x808f7a54566844f5:0xb7c87b7bcf85e387!2s88+Eureka+Dr,+Pacifica,+CA+94044,+USA!3b1!8m2!3d37.6338402!4d-122.4887445!16s%2Fg%2F11rg67stq7!3m5!1s0x808f7a54566844f5:0xb7c87b7bcf85e387!8m2!3d37.6338402!4d-122.4887445!16s%2Fg%2F11rg67stq7?entry=ttu&g_ep=EgoyMDI1MDkxMC4wIKXMDSoASAFQAw%3D%3D" loading="eager" target="_blank">123.33</a></p>
                         </div>
                     </div>
                 </div>
