--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Serenity Spa & Massage</title>
+    <title>Skin Care by Laxmi Raixa</title>
     <meta name="description" content="Premium spa and massage services for relaxation and wellness. Book your appointment today.">
     <meta name="keywords" content="spa, massage, wellness, relaxation, therapy, beauty treatments">
     
@@ -26,7 +26,7 @@
         <nav class="navbar" id="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                     <a href="#home" class="log"> <h2>Serenity Spa</h2></a>
+                     <a href="#home" class="log"> <h2>Skin Care By Laxmi Raixa</h2></a>
                    
                 </div>
                 <div class="nav-menu" id="nav-menu">
@@ -53,7 +53,7 @@
             <div class="footer-container">
                 <div class="footer-content">
                     <div class="footer-section">
-                        <h3>Serenity Spa & Massage</h3>
+                        <h3>Skin Care by Laxmi Raixa</h3>
                         <p>Your sanctuary for relaxation and wellness.</p>
                         <div class="social-links">
                             <a href="https://www.facebook.com/laxmi.bhandari.507/#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
