--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <a href="#services" class="nav-link" data-link>Services</a>
                     <a href="#about" class="nav-link" data-link>About</a>
                     <a href="#contact" class="nav-link" data-link>Contact</a>
+                    <a href="https://skincarebylaxmi.glossgenius.com/" class="nav-link book-now" target="_blank" rel="noopener noreferrer">Book Now</a>
                 </div>
                 <div class="nav-toggle" id="nav-toggle">
                     <span class="bar"></span>
