--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         <main id="main-content">
             <!-- Content will be dynamically loaded here -->
         </main>
-
+        <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3159.651539454785!2d-122.49098114669323!3d37.63388370001684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7a54560eff75%3A0x49e35ccbd343541d!2s80%20Eureka%20Dr%20%23136%2C%20Pacifica%2C%20CA%2094044%2C%20USA!5e0!3m2!1sen!2snp!4v1758955751221!5m2!1sen!2snp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
         <!-- Footer -->
         <footer class="footer">
             <div class="footer-container">
