--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     <div class="footer-section">
                         <h4>Contact Info</h4>
                         <div class="contact-info">
-                            <p style="color: black;"><i class="fas fa-phone"></i><a href="tel:+1-14159679554">+1-14159679554</a></p>
-                            <p style="color: black;"><i class="fas fa-envelope"></i><a href="mailto:laxmi_sanu@yahoo.com" target="_blank">laxmi_sanu@yahoo.com</a> </p>
+                            <p style="color: black;"><i class="fas fa-phone"></i><a href="tel:+1-4159679554">+1-4159679554</a></p>
+                            <p style="color: black;"><i class="fas fa-envelope"></i><a href="mailto:laxmi_sanu2@yahoo.com" target="_blank">laxmi_sanu2@yahoo.com</a> </p>
                             <p style="color: black;"><i class="fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps/place/88+Eureka+Dr,+Pacifica,+CA+94044,+USA/@37.6338402,-122.4913194,17z/data=!4m15!1m8!3m7!1s0x808f7a54566844f5:0xb7c87b7bcf85e387!2s88+Eureka+Dr,+Pacifica,+CA+94044,+USA!3b1!8m2!3d37.6338402!4d-122.4887445!16s%2Fg%2F11rg67stq7!3m5!1s0x808f7a54566844f5:0xb7c87b7bcf85e387!8m2!3d37.6338402!4d-122.4887445!16s%2Fg%2F11rg67stq7?entry=ttu&g_ep=EgoyMDI1MDkxMC4wIKXMDSoASAFQAw%3D%3D" loading="eager" target="_blank">123.33</a></p>
                         </div>
                     </div>
