--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 
                 <div class="footer-bottom">
                     <p style="color: rgb(63, 59, 59);">&copy; 2025 Skin Care by Laxmi. All rights reserved.</p>
+                    <p style="color: rgb(63, 59, 59);">Designed by Dipsan Shrestha and Abhid Bhandari</a></p>
                 </div>
             </div>
         </footer>
