--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
                         <h4>Contact Info</h4>
                         <div class="contact-info">
                             <p style="color: black;"><i class="fas fa-phone"></i><a href="tel:+1-4159679554">+1-4159679554</a></p>
-                            <p style="color: black;"><i class="fas fa-envelope"></i><a href="mailto:skincarebylaxmi@gmail.com" target="_blank">skincarebylaxmi@gmail.com</a> </p>
+                            <p style="color: black;"><i class="fas fa-envelope"></i>
+                                <a href="mailto:skincarebylaxmi@gmail.com" target="_blank">skincarebylaxmi@gmail.com</a>
+                            </p>
+                            <p style="color: black;"><i class="fas fa-envelope"></i>
+                                <a href="mailto:laxmi_sanu2@yahoo.com" target="_blank">laxmi_sanu2@yahoo.com</a>
+                            </p>
                             <p style="color: black;"><i class="fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps/place/80+Eureka+Dr+%23136,+Pacifica,+CA+94044,+USA/@37.633884,-122.488792,16z/data=!4m6!3m5!1s0x808f7a54560eff75:0x49e35ccbd343541d!8m2!3d37.6338839!4d-122.4887925!16s%2Fg%2F11ll6tgzzg?hl=en&entry=ttu&g_ep=EgoyMDI1MDkyNC4wIKXMDSoASAFQAw%3D%3D" target="_blank">88 Eureka Dr,Pacifica,CA 94044,USA</a></p>
                         </div>
                     </div>
