--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Skin Care by Laxmi</title>
-    <meta name="description" content="Premium spa and massage services for relaxation and wellness. Book your appointment today.">
-    <meta name="keywords" content="spa, massage, wellness, relaxation, therapy, beauty treatments">
+    <meta name="description" content="“Discover the HOP+ Pilleo Mask – the Korean Filler Facial®. A non-invasive anti-aging treatment that plumps skin, reduces wrinkles, and boosts collagen with Poly L-Lactic Acid (PLLA). Get smoother, youthful, radiant skin without needles or downtime.”">
+    <meta name="keywords" content="Korean Filler Facial, anti-aging treatment, collagen, skin care, Poly L-Lactic Acid (PLLA), wrinkles, downtime, non-invasive, treatment, plumping, skin, wrinkles, collagen, and wrinkles.">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="public/images/logo.png">
