--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <p>Your sanctuary for relaxation and wellness.</p>
                         <div class="social-links">
                             <a href="https://www.facebook.com/laxmi.bhandari.507/#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/skincarebylaxmi/?igsh=ODk3Ymc3eTF4b3dq&utm_source=qr&fbclid=IwY2xjawNIEZxleHRuA2FlbQIxMABicmlkETFMc3ptTzFXVlJGN3lCeTlvAR67ykwIUH2mYU44iEg9uyqw73QCvfUGlvVFCta00A_uVhyAVNZLFCQN7PgsjA_aem_Uqai3ZvBLaCenaO7uO_Ttw" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                             <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         </div>
                     </div>
